# becoming-functonal-in-rust

./: Cargo.toml  README.md
chapter-10-putting-it-all-together/: Cargo.toml
chapter-10-putting-it-all-together/src/: main.rs
chapter-2/example-2-1/src/: customer.rs
chapter_10/putting_it_all_together/: main.rs
chapter_2/: example_2_1.rs  example_2_10.rs  example_2_11.rs  example_2_12.rs  example_2_13.rs  example_2_14.rs  example_2_15.rs  example_2_16.rs  example_2_17.rs  example_2_18.rs  example_2_19.rs  example_2_2.rs  example_2_3.rs  example_2_4.rs  example_2_4_rusty.rs  example_2_5.rs  example_2_6.rs  example_2_6_full_context.rs  example_2_7...2_9.rs
chapter_2/example_2_1/: customer.rs
chapter_3/: example_3_1.rs  example_3_10.rs  example_3_13.rs  example_3_14.rs  example_3_16.rs  example_3_17.rs  example_3_18.rs  example_3_19.rs  example_3_2.rs  example_3_20.rs  example_3_21.rs  example_3_22.rs  example_3_27.rs  example_3_28.rs  example_3_29.rs  example_3_3.rs  example_3_4.rs  example_3_5.rs  example_3_7.rs  example_3_8.rs  example_3_9.rs  scratchpad_1.rs
chapter_4/: example_4_11.rs  example_4_12.rs  example_4_13.rs  example_4_14.rs  example_4_15.rs  example_4_4.rs  example_4_5.rs  example_4_6.rs  scratchpad_1.rs
