[package]
name = "becoming-functional-in-rust"
version = "0.1.0"
authors = ["monsieursquirrel"]

[[bin]]
name = "example_2_1"
path = "chapter_2/example_2_1.rs"

[[bin]]
name = "example_2_4_rusty"
path = "chapter_2/example_2_4_rusty.rs"


[[bin]]
name = "example_2_6_full_context"
path = "chapter_2/example_2_6_full_context.rs"

[[bin]]
name = "example_2_11"
path = "chapter_2/example_2_11.rs"

[[bin]]
name = "example_2_14"
path = "chapter_2/example_2_14.rs"

[[bin]]
name = "example_2_16"
path = "chapter_2/example_2_16.rs"

[[bin]]
name = "chapter_10_putting_it_all_together"
path = "chapter_10/putting_it_all_together/main.rs"
